--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
 		"editor.defaultFormatter": "biomejs.biome"
 	},
 	"editor.codeActionsOnSave": {
-		// "source.fixAll.biome": "explicit"
+		"source.fixAll.biome": "explicit"
 	},
 	"editor.formatOnSave": true
 }
